...
      },
      child: Scaffold(
        appBar: AppBar(
          leading: BackButton(
            onPressed: () => pop(context),
          ),
          title: const Text("Settings"),
        ),
        body: Column(
          children: [
            FilledButton(
              child: const Text("Account Details"),
              onPressed: () {
                const AccountDetailsRoute(name: "Alex").push(context);
              },
            ),
            // App Version
            const Padding(
...
